# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.470 2007-09-18 13:25:14 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/09/18) make some improvments in file Layout.pm to get a better
    performance if you use the block function
 - (2007/09/17) Fixed bug 2291 - include PDF::API2 in AgentTicketSearch
    only if needed
 - (2007/09/13) Fixed bug# 1186 - Convertion from HTML to text incomplete
    if html encoded chars like &Egrave; or &eacute; is used. Added full
    HTML to text convertion to email parser.
 - (2007/09/13) Improved report overview of perfornance log.

2.2.3 (2007/09/13)
 - (2007/09/13) Fixed bug 2285 - Typo in german translation
    "Aktualisierungszeit".
 - (2007/09/12) Fixed bug# 1203 - Redhat shm workaround should not relate to
    real shm request.
 - (2007/09/07) Fixed bug# 2265 - On IIS6, Package Manager is displaying a
    error after installing a package (header not complete). But package got
    installed corectly.
 - (2007/09/06) Fixed bug# 2261 - False params in call of ServiceLookup() and
    SLALookup() functions.
 - (2007/09/06) Fixed reopened Bug# 2142 - Ticket history entry was wrong if
    service, sla or ticket type was changed.
 - (2007/09/03) Fixed bug# 2193 - Postmaster module
    Kernel::System::PostMaster::Filter::NewTicketReject is not working - need
    Charset!
 - (2007/09/03) Fixed bug# 2245 - Responsible / Owner Field not working for
    all users in the Email-Ticket form.
 - (2007/09/03) Improved system speed of escalation calculation if many open
    ticket (> 2000) are there.
 - (2007/08/28) Fixed Ticket# 2007082842000477 - Problem with different customer
    sources and use CacheTTL option (namespace of cache is not uniq).