@@ -1,9 +1,12 @@
+#!/usr/bin/perl -w -d:DProf
 #!/usr/bin/perl -w
+
+#!/usr/bin/perl -w -d:SmallProf
 # --
 # bin/cgi-bin/index.pl - the global CGI handle file (incl. auth) for OTRS
-# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: index.pl,v 1.81 2006-08-26 17:29:03 martin Exp $
+# $Id: index.pl,v 1.82 2007-09-18 14:49:13 tr Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -28,7 +31,7 @@ use lib "$Bin/../../Kernel/cpan-lib";
 use strict;
 
 use vars qw($VERSION @INC);
-$VERSION = '$Revision: 1.81 $';
+$VERSION = '$Revision: 1.82 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 # check @INC for mod_perl (add lib path for "require module"!)
@@ -45,4 +48,3 @@ my $Interface = Kernel::System::Web::InterfaceAgent->new(Debug => $Debug);
 
 # execute object
 $Interface->Run();
-
